[백승종] layout 및 3개의 그리드 수정

--- a/SBRT-Web/src/main/resources/static/cm/css/all.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/all.css
@@ -224,8 +224,8 @@ a:hover,a:active,a:focus{text-decoration:none}
 .cm_gridbox{position:relative;padding:0;margin:0;}
 .cm_grid{border-top:2px solid rgba(0,61,124,1); border-left: 2px solid rgba(0,61,124,1); border-right: 2px solid rgba(0,61,124,1);
 		 border-bottom: 2px solid rgba(0,61,124,1); margin-bottom:2px solid rgba(0,61,124,1);}
-.cm_grid.left{height:580px;} /* 왼쪽 그리드 높이 */
-.cm_grid.right{height:580px;} /* 오른쪽 그리드 높이 */
+.cm_grid.left{height:100%;} /* 왼쪽 그리드 높이 */
+.cm_grid.right{height:100%;} /* 오른쪽 그리드 높이 */
 
 .cm_grid .gridHeaderTableDefault{border:0;border-right:1px solid #c8cad0;border-bottom:1px solid #c8cad0}
 .cm_grid thead.gridHeaderTableDefault{border:0}
