--- a/SBRT-Web/src/main/resources/static/cm/css/layout.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/layout.css
@@ -7,9 +7,9 @@
 				}
 .pgm_navi { overflow:hidden; height:40px }
 .pgm_header { overflow:hidden; height:40px }
-.pgm_content { gap: 0px 5px; }
-.pgm_list { gap: 5px 0px; }
-.pgm_detail { gap: 5px 0px; }
+.pgm_content { gap: 0px 5px; margin-bottom: 10px }
+.pgm_list { gap: 2px 0px; }
+.pgm_detail { gap: 2px 0px; }
 .pgm_sep {  }
 
 .grdc_a {display:grid; grid-template-columns:auto}
@@ -43,7 +43,7 @@
 .grdc_400_20_a_20_400 {display:grid; grid-template-columns:400px 20px auto 20px 400px;}
 
 .grdr_20_a {display:grid; grid-template-rows: minmax(20px, max-content) auto;}
-.grdr_20_20_a {display:grid; grid-template-rows: minmax(20px, max-content) minmax(20px, max-content) auto;}
+.grdr_41_36_a {display:grid; grid-template-rows: minmax(41px, max-content) minmax(36px, max-content) auto;}
 .grdr_20_20_20_a {display:grid; grid-template-rows: minmax(20px, max-content) minmax(20px, max-content) minmax(20px, max-content) auto;}
 
 .grdr_20_40_a {display:grid; grid-template-rows: 20px 40px auto;}
@@ -64,7 +64,7 @@
 .grdr_20_a_20_300 {display:grid; grid-template-rows: 20px auto 20px 300px;}
 .grdr_30_a_30_150 {display:grid; grid-template-rows: 30px auto 30px 150px;}
 
-.grdr_20_a_20_20_a {display:grid; grid-template-rows: minmax(20px, max-content) auto 20px minmax(20px, max-content) auto;} /* 오른쪽 상하 구분선 추가 */
+.grdr_20_350_20_20_a {display:grid; grid-template-rows: minmax(20px, max-content) 350px 20px minmax(20px, max-content) auto;} /* 오른쪽 상하 구분선 추가 */
 .grdr_25_a_20_20_a {display:grid; grid-template-rows: minmax(25px, max-content) auto 20px minmax(20px, max-content) auto;}
 .grdr_20_a_20_20_a_20_20_a {display:grid; grid-template-rows: minmax(20px, max-content) auto minmax(20px, max-content) minmax(20px, max-content) auto minmax(20px, max-content) minmax(20px, max-content) auto;}
 
