--- a/SBRT-Web/src/main/resources/static/cm/css/main.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/main.css
@@ -34,15 +34,15 @@ body {
 	background-color: #666
 }
 
-@media (min-width: 768px) {
+/* @media (min-width: 768px) {
 	.header {
 		padding-left: 24px;
 		padding-right: 24px
 	}
-}
+} */
 
 /* Layout */
-.main_wrap{position:relative;height:100%;min-width:1024px;background:#f2f3f6;overflow:hidden;} /* min-width:1280px */
+.main_wrap{position:relative;height:100%;min-width:1280px;background:#f2f3f6;overflow:hidden;} /* min-width:1280px */
 .main_header{margin:0px;}
 .main_container{position:absolute; left:0; right:0;top:88px; bottom:0;}
 /* .btn_aside{position:absolute;left:10px;top:8px;width:26px;height:26px;padding:2px;margin:0;;font-size:0;line-height:0;text-indent:-9999px;overflow:hidden;background:url(/cm/images/inc/bg_btn_side_slide.png) 50% 50% no-repeat}
@@ -247,24 +247,24 @@ body {
 
 .head_box{position:relative; height:44px; background:#003d7c}
 
-.head_box .nav{position:absolute;top:0;left:213px;right:0;height:40px;background:none;font-size:13px;}
+.head_box .nav{position:absolute;top:0;left:213px;right:0;height:40px;background:none;font-size:13px;width:1000px}
 .head_box .nav > li{position:relative; display: inline-block;}
 .head_box .nav > li.on{background:#3879d9}
-.head_box .nav > li > a{display:block;margin:0;color:#fff; width:180px; line-height:44px;font-weight:bold; text-align: center;}
+.head_box .nav > li > a{display:block;margin:0;color:#fff; width:155px; line-height:44px;font-weight:bold; text-align: center;}
 .head_box .nav > li > a:hover,
 .head_box .nav > li > a.on{background:#3879d9}
 .head_box .nav > li .submenu{display:none; position:absolute; left:0; top:44px; background:#fff; z-index:1000; text-indent:15px;border: 1px solid #c4cad6;border-top:none}
 .head_box .nav > li .submenu.on{display:block;}
-.head_box .nav > li .submenu > li{position:relative; line-height:27px;  width:180px;}
-.head_box .nav > li .submenu > li > a{display:block; background:url(/cm/images/inc/ico_gnb_plus.png) no-repeat 165px center;padding:3px;}
+.head_box .nav > li .submenu > li{position:relative; line-height:27px;  width:155px;}
+.head_box .nav > li .submenu > li > a{display:block; background:url(/cm/images/inc/ico_gnb_plus.png) no-repeat 140px center;padding:3px;}
 .head_box .nav > li .submenu > li > a:hover,
-.head_box .nav > li .submenu > li > a.on{background:#f7f8fb url(/cm/images/inc/ico_gnb_minus.png) no-repeat 165px center;}
+.head_box .nav > li .submenu > li > a.on{background:#f7f8fb url(/cm/images/inc/ico_gnb_minus.png) no-repeat 140px center;}
 .head_box .nav > li .submenu > li:first-child > a{border-top: 0;}
 .head_box .nav > li .submenu > li:last-child > a{border-bottom: 0;}
-.head_box .nav > li .submenu > li > .depth3{display:none; position:absolute; left:180px; top:0px; background:#fff; border: 1px solid #c4cad6;}
+.head_box .nav > li .submenu > li > .depth3{display:none; position:absolute; left:155px; top:0px; background:#fff; border: 1px solid #c4cad6;}
 .head_box .nav > li .submenu > li > .depth3.on{display:block;}
 .head_box .nav > li .submenu > li > .depth3 > li{line-height:27px;}
-#winc_header .head_box .nav > li .submenu > li > .depth3 > li{width:190px; text-indent:15px;}
+#winc_header .head_box .nav > li .submenu > li > .depth3 > li{width:158px; text-indent:15px;}
 .head_box .nav > li .submenu > li > .depth3 > li:last-child > a{}
 .head_box .nav > li .submenu > li > .depth3 > li > a{display: block; overflow: hidden; text-overflow:ellipsis; padding:3px;}
 .head_box .nav > li .submenu > li > .depth3 > li > a:hover{background:#f7f8fb}
@@ -297,44 +297,6 @@ body {
 
 .hid_menu{display: none; background:url(/cm/images/contents/ico_list.png) no-repeat left top; width:22px; height:21px;}
 
-/* Side */
-.sidebox{position: absolute; left: 0; right: 0; top: 0; bottom: 0; width:214px;}
-.sidebox .aside_top {position:relative;width:214px;height:28px;padding:0;margin:0;background:url(/cm/images/inc/bg_userbox.gif) no-repeat;}
-.sidebox .aside_top .userbox{position:absolute;left:10px;top:7px;height:15px;width:128px;overflow:hidden;white-space:nowrap;text-overflow:ellipsis;}
-.sidebox .aside_top .userbox .nm_tt{float:none!important; display:inline;padding:0;margin:0;line-height:15px;padding:0;font-size:12px;color:#424343;font-weight:bold}
-.sidebox .aside_top .userbox .nm_tt.stg{color:#0a776d}
-.sidebox .aside_top .logout {position:absolute;top:6px;right:25px;width:51px; height:18px; text-indent:-9999px; background:url(/cm/images/inc/bg_btn_logout.gif) no-repeat; overflow:hidden;}
-.sidebox .aside_top .setup {position:absolute;top:8px;right:4px;width:16px; height:17px; text-indent:-9999px; background:url(/cm/images/inc/bg_btn_setup.gif) no-repeat;overflow:hidden;}
-
-.sidebox .aside_tab{position:absolute;left:0;top:36px;bottom:0;width:214px;padding:0;margin:0; background:#fff}
-.sidebox .as_tab {position:relative;width:214px;height:36px;overflow:hidden;background:url(/cm/images/inc/bg_side_mn.png) no-repeat; }
-.sidebox .as_tab.mymn{background:url(/cm/images/inc/bg_side_mymn.png) no-repeat}
-.sidebox .as_tab a {width:107px;font-weight:bold; line-height:36px; color:#888; text-align:center; display:block; float:left;}
-.sidebox .as_tab a:first-child {color:#000;}
-.sidebox .as_tab.mymn a {color:#000;}
-.sidebox .as_tab.mymn a:first-child {color:#888}
-
-.sidebox .aside_tab .aside_search {position:relative;width:214px; height:37px; background:url(/cm/images/inc/bg_side_shbox.gif) no-repeat;}
-.sidebox .aside_tab .aside_search .w2input{margin:11px 0 0 15px; width:156px;height:15px;border:0;}
-.sidebox .aside_tab .aside_search .btn_search {position:absolute;top:10px;right:9px;}
-.sidebox .aside_tab .aside_search .btn_search a {display:block;width:15px;height:16px;text-indent:-9999px;background:url(/cm/images/inc/bg_side_sh_ic.png) no-repeat;overflow:hidden}
-
-.sidebox .lnb{position:absolute;left:0;right:0;top:0;bottom:0;overflow:hidden;}
-.sidebox .lnb .w2switch_case{position:absolute; left:0; right:0; top:0px; bottom:42px;}
-
-.sidebox .sidelist{display:block;position:absolute;left:10px;right:11px;bottom:10px;height:120px;margin:10px 0 0;;background:#fff;z-index:120}
-.sidebox .studylist{position:absolute;left:0;right:0;top:0;bottom:0}
-.sidebox .studylist .study_title{width:168px;height:15px;padding:4px 0 5px 23px;margin:0;line-height:15px;font-size:12px;color:#fff;background:url(/cm/images/inc/bg_side_list.gif) no-repeat;background-size:100% 100%;}
-.sidebox .studylist .study_cont{position:relative;max-height:99px;border:1px solid #ccc;overflow:auto}
-.sidebox .studylist .study_cont .sty_link{display:block;height:19px;line-height:19px;padding:0 0 0 10px;color:#555;border-top:1px solid #ccc;background:url(/cm/images/inc/bg_study_bu.gif) no-repeat 5px 7px;text-overflow:ellipsis;}
-.sidebox .studylist .study_cont .sty_link:first-child{border-top:0}
-.sidebox .studylist .study_cont .sty_link:hover{text-decoration:underline}
-.sidebox .studylist .setup {position:absolute;top:4px;right:4px;width:16px; height:17px; text-indent:-9999px; background:url(/cm/images/inc/bg_btn_setup.gif) no-repeat;overflow:hidden;}
-
-.sidebox .aside_bottom {position:absolute; left:0; right:0; bottom:0; height:39px; background:url(/cm/images/inc/bg_aside_bottom.png) left bottom no-repeat;z-index:120;}
-.sidebox .aside_bottom .w2selectbox {margin:10px 0 0 13px; width:187px; height:21px; border:0; color:#3b3b3b; background-color:transparent;}/* 2015-04-13 ### */
-.sidebox .aside_bottom a.btn_use_write{position:absolute;top:5px;right:5px;width:36px;height:24px;display:block;background:url(/cm/images/btn/btn_aside_write.png) no-repeat;}/* 2015-04-13 ### */
-.sidebox .aside_bottom .w2selectbox .w2selectbox_col_button{background-image:url(/cm/images/inc/select_arrow.gif);}
 
 /*historyly */
 .box_history{position:absolute;left:6px;right:6px;bottom:10px;height:24px;background:#fff;z-index:120;overflow:hidden;}
