[백승종] 레이 아웃 수정

--- a/SBRT-Web/src/main/resources/static/cm/css/layout.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/layout.css
@@ -68,6 +68,9 @@
 .grdr_25_a_20_20_a {display:grid; grid-template-rows: minmax(25px, max-content) auto 20px minmax(20px, max-content) auto;}
 .grdr_20_a_20_20_a_20_20_a {display:grid; grid-template-rows: minmax(20px, max-content) auto minmax(20px, max-content) minmax(20px, max-content) auto minmax(20px, max-content) minmax(20px, max-content) auto;}
 
+.grdr_20_180_20_20_105_20_20_a {display:grid; grid-template-rows: minmax(20px, max-content) 180px minmax(20px, max-content) minmax(20px, max-content) 105px minmax(20px, max-content) minmax(20px, max-content) auto;}
+
+
 .grdr_20_a_20_20_a_20_a {display:grid; grid-template-rows: minmax(20px, max-content) auto 20px minmax(20px, max-content) auto 20px auto;}
 
 .required {font-color:red;}
