[양현우] 배차계획 관리 차트 레이아웃

--- a/SBRT-Web/src/main/resources/static/cm/css/layout.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/layout.css
@@ -45,6 +45,8 @@
 .grdc_a_20_800 {display:grid; grid-template-columns:auto 20px 800px;} /* 왼쪽 오른쪽 구분선 추가 */
 .grdc_a_20_1000 {display:grid; grid-template-columns:auto 20px 1000px;} /* 왼쪽 오른쪽 구분선 추가 */
 .grdc_a_20_1200 {display:grid; grid-template-columns:auto 20px 1200px;}
+.grdc_a_20_1400 {display:grid; grid-template-columns:auto 20px 1400px;}
+.grdc_a_20_1700 {display:grid; grid-template-columns:auto 20px 1700px;}
 .grdc_330_20_a {display:grid; grid-template-columns:330px 20px auto;}
 
 .grdc_600_20_a {display:grid; grid-template-columns:600px 20px auto;}
