[백승종]지도 수정 사항 적용

--- a/SBRT-Web/src/main/resources/static/cm/css/layout.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/layout.css
@@ -75,6 +75,7 @@
 .grdr_40_40_a {display:grid; grid-template-rows: 40px 40px auto;}
 .grdr_50_50_a {display:grid; grid-template-rows: 50px 50px auto;}
 .grdr_400_20_a {display:grid; grid-template-rows: 400px 20px auto;}
+.grdc_500_20_a {display:grid; grid-template-rows: 500px 20px auto;}
 .grdr_30_100_30_a {display:grid; grid-template-rows: 30px 100px 30px auto;}
 
 .grdr_20_200_20_a {display:grid; grid-template-rows: minmax(20px, max-content) 200px minmax(20px, max-content) auto;}
