[백승종] 지도 수정 사항 적용

--- a/SBRT-Web/src/main/resources/static/cm/css/layout.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/layout.css
@@ -49,6 +49,7 @@
 .grdc_a_20_1700 {display:grid; grid-template-columns:auto 20px 1700px;}
 .grdc_330_20_a {display:grid; grid-template-columns:330px 20px auto;}
 
+.grdc_500_20_a {display:grid; grid-template-columns:500px 20px auto;}
 .grdc_600_20_a {display:grid; grid-template-columns:600px 20px auto;}
 
 .grdc_1f_1f {display:grid; grid-template-columns:1fr 1fr;}
