--- a/SBRT-Web/src/main/resources/static/cm/css/main.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/main.css
@@ -409,7 +409,7 @@ body {
 /* SDI */
 .tac_layout .w2tabcontrol_tabhost li{margin-right: 0; border:1px solid #c4cad6; background:#fff; width:129px; height:34px; line-height:34px;}
 .tac_layout .w2tabcontrol_tabhost li.w2tabcontrol_active,.tac_layout .w2tabcontrol_tabhost li.w2tabcontrol_selected {border-bottom:1px solid #fff}
-.tac_layout .w2tabcontrol_tabhost li a{margin:0 17px;}
+/* .tac_layout .w2tabcontrol_tabhost li a{margin:0 17px;} */
 .tac_layout .w2tabcontrol_control,
 .tac_layout .w2tabcontrol_tabhost{height:36px; z-index: 1;}
 .tac_layout .w2tabcontrol_control .scroll{left:0px !important;}
