--- a/SBRT-Web/src/main/resources/static/cm/css/layout.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/layout.css
@@ -52,6 +52,9 @@
 .grdc_500_20_a {display:grid; grid-template-columns:500px 20px auto;}
 .grdc_600_20_a {display:grid; grid-template-columns:600px 20px auto;}
 
+.grdc_a_20_a {display:grid; grid-template-columns:auto 20px auto;}
+
+
 .grdc_1f_1f {display:grid; grid-template-columns:1fr 1fr;}
 .grdc_200_1f_1f {display:grid; grid-template-columns:200px 1fr 1fr;}
 .grdc_2f_1f {display:grid; grid-template-columns:2fr 1fr;}
@@ -76,15 +79,20 @@
 .grdr_40_40_a {display:grid; grid-template-rows: 40px 40px auto;}
 .grdr_50_50_a {display:grid; grid-template-rows: 50px 50px auto;}
 .grdr_400_20_a {display:grid; grid-template-rows: 400px 20px auto;}
-.grdc_500_20_a {display:grid; grid-template-rows: 500px 20px auto;}
+.grdr_500_20_a {display:grid; grid-template-rows: 500px 20px auto;}
 .grdr_30_100_30_a {display:grid; grid-template-rows: 30px 100px 30px auto;}
 
 .grdr_20_200_20_a {display:grid; grid-template-rows: minmax(20px, max-content) 200px minmax(20px, max-content) auto;}
+
+
+.grdr_20_300_a {display:grid; grid-template-rows: minmax(20px, max-content) 300px auto;}
 
 .grdr_20_300_20_a {display:grid; grid-template-rows: minmax(20px, max-content) 300px minmax(20px, max-content) auto;}
 
 .grdr_20_a_20_300 {display:grid; grid-template-rows: 20px auto 20px 300px;}
 .grdr_30_a_30_150 {display:grid; grid-template-rows: 30px auto 30px 150px;}
+
+.grdr_20_a_500 {display:grid; grid-template-rows: 20px auto 500px;}
 
 .grdr_20_350_20_20_a {display:grid; grid-template-rows: minmax(20px, max-content) 350px 20px minmax(20px, max-content) auto;} /* 오른쪽 상하 구분선 추가 */
 .grdr_25_a_20_20_a {display:grid; grid-template-rows: minmax(25px, max-content) auto 20px minmax(20px, max-content) auto;}
