[양현우] 안내기영상 편성

--- a/SBRT-Web/src/main/resources/static/cm/css/layout.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/layout.css
@@ -41,12 +41,16 @@
 .grdc_a_100 {display:grid; grid-template-columns:auto 100px;}
 .grdc_a_50 {display:grid; grid-template-columns:auto 50px;}
 
+
 .grdc_a_20_700 {display:grid; grid-template-columns:auto 20px 700px;} /* 왼쪽 오른쪽 구분선 추가 */
 .grdc_a_20_800 {display:grid; grid-template-columns:auto 20px 800px;} /* 왼쪽 오른쪽 구분선 추가 */
 .grdc_a_20_1000 {display:grid; grid-template-columns:auto 20px 1000px;} /* 왼쪽 오른쪽 구분선 추가 */
 .grdc_a_20_1200 {display:grid; grid-template-columns:auto 20px 1200px;}
 .grdc_a_20_1400 {display:grid; grid-template-columns:auto 20px 1400px;}
 .grdc_a_20_1700 {display:grid; grid-template-columns:auto 20px 1700px;}
+
+.grdc_a_70_550 {display:grid; grid-template-columns:auto 70px 550px;}
+
 .grdc_330_20_a {display:grid; grid-template-columns:330px 20px auto;}
 
 .grdc_500_20_a {display:grid; grid-template-columns:500px 20px auto;}
@@ -82,9 +86,6 @@
 .grdr_500_20_a {display:grid; grid-template-rows: 500px 20px auto;}
 .grdr_30_100_30_a {display:grid; grid-template-rows: 30px 100px 30px auto;}
 
-.grdr_20_200_20_a {display:grid; grid-template-rows: minmax(20px, max-content) 200px minmax(20px, max-content) auto;}
-
-
 .grdr_20_300_a {display:grid; grid-template-rows: minmax(20px, max-content) 300px auto;}
 
 .grdr_20_300_20_a {display:grid; grid-template-rows: minmax(20px, max-content) 300px minmax(20px, max-content) auto;}
@@ -95,6 +96,7 @@
 .grdr_20_a_500 {display:grid; grid-template-rows: 20px auto 500px;}
 
 .grdr_20_350_20_20_a {display:grid; grid-template-rows: minmax(20px, max-content) 350px 20px minmax(20px, max-content) auto;} /* 오른쪽 상하 구분선 추가 */
+.grdr_20_200_20_20_a {display:grid; grid-template-rows: minmax(20px, max-content) 200px 20px minmax(20px, max-content) auto;}
 .grdr_25_a_20_20_a {display:grid; grid-template-rows: minmax(25px, max-content) auto 20px minmax(20px, max-content) auto;}
 .grdr_20_a_20_20_a_20_20_a {display:grid; grid-template-rows: minmax(20px, max-content) auto minmax(20px, max-content) minmax(20px, max-content) auto minmax(20px, max-content) minmax(20px, max-content) auto;}
 
