[백승종] 수정 사항 적용

--- a/SBRT-Web/src/main/resources/static/cm/css/layout.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/layout.css
@@ -70,6 +70,7 @@
 .grdr_20_a {display:grid; grid-template-rows: minmax(20px, max-content) auto;}
 .grdr_41_36_a {display:grid; grid-template-rows: minmax(41px, max-content) minmax(36px, max-content) auto;}
 .grdr_36_a_40 {display:grid; grid-template-rows: minmax(36px, max-content) auto minmax(40px, max-content); }
+.grdr_a_40 {display:grid; grid-template-rows: auto minmax(40px, max-content); }
 .grdr_20_20_20_a {display:grid; grid-template-rows: minmax(20px, max-content) minmax(20px, max-content) minmax(20px, max-content) auto;}
 
 .grdr_20_40_a {display:grid; grid-template-rows: 20px 40px auto;}
@@ -85,6 +86,9 @@
 .grdr_400_20_a {display:grid; grid-template-rows: 400px 20px auto;}
 .grdr_500_20_a {display:grid; grid-template-rows: 500px 20px auto;}
 .grdr_30_100_30_a {display:grid; grid-template-rows: 30px 100px 30px auto;}
+
+.grdr_20_200_20_a {display:grid; grid-template-rows: minmax(20px, max-content) 200px minmax(20px, max-content) auto;}
+
 
 .grdr_20_300_a {display:grid; grid-template-rows: minmax(20px, max-content) 300px auto;}
 
