--- a/SBRT-Web/src/main/resources/static/cm/css/all.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/all.css
@@ -465,3 +465,9 @@ a:hover,a:active,a:focus{text-decoration:none}
 .cnt_title_grp { height:25px; border-bottom:1px solid #B3B3B3; padding-top:10px; padding-bottom:5px; }
 
 /* Treeview */
+
+
+.tmap_label { background-color: rgba(255,255,255,0.8); color:black; padding: 3px; border: 0.5px solid black; }
+.tmap_vertex_label { background-color: rgba(255,255,255,0.8); color:black; padding: 3px; border: 0.5px solid black; }
+.tmap_busstop_label { background-color: rgba(255,255,255,0.8); color:black; padding: 3px; border: 0.5px solid black; }
+.tmap_cross_label { background-color: rgba(255,255,255,0.8); color:black; padding: 3px; border: 0.5px solid black; }
