[양현우] 차내장치 유지보수 관리 TabControl 내부 에러 해결

--- a/SBRT-Web/src/main/resources/static/cm/css/layout.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/layout.css
@@ -79,6 +79,7 @@
 .grdr_25_2_a {display:grid; grid-template-rows: minmax(25px, max-content) 2px auto;}
 .grdr_20_2_187_20_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 187px minmax(20px, max-content) auto;} /* 왼쪽그리드 2개 layout*/
 .grdr_20_36_a {display:grid; grid-template-rows: minmax(20px, max-content) minmax(36px, max-content) auto;} /* 왼쪽그리드 하단 */
+.grdr_20_36_250_20_20_36_a {display:grid; grid-template-rows: minmax(20px, max-content) minmax(36px, max-content) minmax(250px, max-content) minmax(20px, max-content) minmax(20px, max-content) minmax(36px, max-content) auto;} /* 왼쪽그리드 하단 */
 
 .grdr_30_40_a {display:grid; grid-template-rows: 30px 40px auto;}
 .grdr_40_40_a {display:grid; grid-template-rows: 40px 40px auto;}
@@ -95,6 +96,7 @@
 .grdr_20_300_20_a {display:grid; grid-template-rows: minmax(20px, max-content) 300px minmax(20px, max-content) auto;}
 
 .grdr_20_a_20_300 {display:grid; grid-template-rows: 20px auto 20px 300px;}
+.grdr_20_a_20_400 {display:grid; grid-template-rows: 20px auto 20px 400px;}
 .grdr_30_a_30_150 {display:grid; grid-template-rows: 30px auto 30px 150px;}
 
 .grdr_20_a_500 {display:grid; grid-template-rows: 20px auto 500px;}
