--- a/SBRT-Web/src/main/resources/static/cm/css/all.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/all.css
@@ -202,7 +202,7 @@ a:hover,a:active,a:focus{text-decoration:none}
 		 border-bottom: 2px solid rgba(0,61,124,1); margin-bottom:2px solid rgba(0,61,124,1);}
 .cm_grid.left{height:100%;} /* 왼쪽 그리드 높이 */
 .cm_grid.leftL{height:100%;} /* 왼쪽  하단그리드 높이 */
-.cm_grid.right{height:100%;} /* 오른쪽 그리드 높이 */
+.cm_grid.right{height:100%} 오른쪽 그리드 높이 
 .cm_grid.popup{height:100%} /* 팝업 그리드 높이 */
 
 .cm_grid .gridHeaderTableDefault{border:0;border-right:1px solid #c8cad0;border-bottom:1px solid #c8cad0}
