--- a/SBRT-Web/src/main/resources/static/cm/css/layout.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/layout.css
@@ -1,3 +1,6 @@
+@charset "utf-8";
+
+
 .pgm_container {
 				width:100%;height:100%;
 				padding: 5px 10px 5px 10px;
@@ -6,7 +9,7 @@
 				gap: 5px 0px;
 				}
 .pgm_navi { overflow:hidden; height:40px }
-.pgm_header { overflow:hidden; height:40px }
+.pgm_header {overflow:hidden;/* height:40px */}
 .pgm_content { gap: 0px 5px; margin-bottom: 10px }
 .pgm_list { gap: 2px 0px; }
 .pgm_detail { gap: 2px 0px; }
@@ -40,7 +43,6 @@
 .grdc_a_150 {display:grid; grid-template-columns:auto 150px;}
 .grdc_a_100 {display:grid; grid-template-columns:auto 100px;}
 .grdc_a_50 {display:grid; grid-template-columns:auto 50px;}
-
 
 .grdc_a_20_700 {display:grid; grid-template-columns:auto 20px 700px;} /* 왼쪽 오른쪽 구분선 추가 */
 .grdc_a_20_800 {display:grid; grid-template-columns:auto 20px 800px;} /* 왼쪽 오른쪽 구분선 추가 */
@@ -79,7 +81,6 @@
 .grdr_25_2_a {display:grid; grid-template-rows: minmax(25px, max-content) 2px auto;}
 .grdr_20_2_187_20_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 187px minmax(20px, max-content) auto;} /* 왼쪽그리드 2개 layout*/
 .grdr_20_36_a {display:grid; grid-template-rows: minmax(20px, max-content) minmax(36px, max-content) auto;} /* 왼쪽그리드 하단 */
-.grdr_20_36_250_20_20_36_a {display:grid; grid-template-rows: minmax(20px, max-content) minmax(36px, max-content) minmax(250px, max-content) minmax(20px, max-content) minmax(20px, max-content) minmax(36px, max-content) auto;} /* 왼쪽그리드 하단 */
 
 .grdr_30_40_a {display:grid; grid-template-rows: 30px 40px auto;}
 .grdr_40_40_a {display:grid; grid-template-rows: 40px 40px auto;}
@@ -96,7 +97,6 @@
 .grdr_20_300_20_a {display:grid; grid-template-rows: minmax(20px, max-content) 300px minmax(20px, max-content) auto;}
 
 .grdr_20_a_20_300 {display:grid; grid-template-rows: 20px auto 20px 300px;}
-.grdr_20_a_20_400 {display:grid; grid-template-rows: 20px auto 20px 400px;}
 .grdr_30_a_30_150 {display:grid; grid-template-rows: 30px auto 30px 150px;}
 
 .grdr_20_a_500 {display:grid; grid-template-rows: 20px auto 500px;}
@@ -116,14 +116,14 @@
 
 .required {font-color:red;}
 
-.vertical_line{box-shadow: 0 0 0 3px #757984 inset; height: 100%; width: 2px; margin-left: 10px;}
-.horizontal_line{box-shadow: 0 0 0 3px #757984 inset; height: 2px; width: 100%; margin-top: 10px;  margin-bottom: 10px;}
+.vertical_line{box-shadow: 0 0 0 3px #ffffff inset;height: 100%;width: 2px;margin-left: 10px;}
+.horizontal_line{box-shadow: 0 0 0 3px #ffffff inset;height: 2px;width: 100%;margin-top: 10px;margin-bottom: 10px;}
 
 /* 상단 검색창 */
-.gr_search{position:relative;padding:5px 5px;margin:0;border:1px solid #ced4d9; border-top:2px solid /* #757984 */rgba(0,61,124,1); background:#f7f7f7; margin-bottom:10px; height:23px}
+.gr_search{position:relative;padding: 8px 21px;margin:0;border:1px solid #ced4d9;border-top: 2px solid /* #757984 */rgb(235 69 69);background:#f7f7f7;margin-bottom:10px;height:23px;}
 .gr_search .btn_main_generator{position:absolute;right:2px}
 .gr_search .btn_main_generator .btn_sh{left:0px;top:0px;margin-right: 5px;}
-.gr_search .label{float:left; position:relative; margin-top: 4px; margin-right: 7px;}
+.gr_search .label{float:left;position:relative;margin-top: 4px;margin-right: 7px;font-weight: bold;}
 .gr_search .radioLabel{float:left; position:relative; margin-top: 4px; margin-left: 10px; margin-right: 7px; }
 .gr_search .radio{float:left; position:relative; margin-top: 3px; margin-right: 7px; min-width: 200px;}
 
@@ -138,3 +138,12 @@
 .gr_sub_header .btn_sub_generator .btn_gcm{left:0px;top:0px;margin-right: 5px;}
 .gr_sub_header .defaultbox{float:left; position:relative; margin-right: 7px;}
 .gr_sub_header .check{float:left; position:absolute; margin-top: 3px; min-width: 200px;}
+
+.gr_sub_search{position:relative;padding: 8px 21px;margin:0;border:1px solid #ced4d9;border-top: 2px solid #333333;background:#f7f7f7;margin-bottom:10px;height:23px;}
+.gr_sub_search .label{float:left;position:relative;margin-top: 4px;margin-right: 7px;font-weight: bold;}
+.gr_sub_search .search_input{width: 200px;height: 21px;margin-top: 1px;float:left;}
+
+
+
+/* 지현수정 */
+#mf_wfm_header {    font-family: 'Noto Sans',"Helvetica", "Arial", sans-serif}
