[백승종] 수정 사항 적용

--- a/SBRT-Web/src/main/resources/static/cm/css/all.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/all.css
@@ -274,6 +274,8 @@ a:hover,a:active,a:focus{text-decoration:none}
 .btn_sh a:before {width: 22px;height: 22px;display: inline-block;font: normal normal normal 14px/1 FontAwesome;font-size: inherit;text-rendering: auto;-webkit-font-smoothing: antialiased;vertical-align: text-bottom;margin: 0;float: left;line-height: 22px;margin-right: -6px;}
 .btn_sh a:hover {border-color:#eb4545; color:#eb545;    box-shadow: 0px 2px 3px rgb(235 69 69 / 0.3);}
 .btn_sh a:hover:before {color:#eb4545;}
+.btn_sh.end a {background: #44ADF9;color: #fff;border-color: #7e7e7e;}
+
 
 .btn_save{background:#fff;}
 .btn_save a{height:24px; line-height:24px; padding:0 10px 0 16px; text-indent:10px; color:#3b3b3b; font-weight:bold; background:url(/cm/images/contents/bg_btn_save_ico.gif) no-repeat left top; display:inline-block;}
@@ -359,6 +361,7 @@ a:hover,a:active,a:focus{text-decoration:none}
 .btn_gcm{margin-left:3px;margin: 0 !important;}
 .btn_gcm a{display:inline-block;padding: 0 6px;height: 24px;line-height: 24px;font-weight:bold;color: #000;width:100%;box-sizing:border-box;background: #f7f7f7;border-radius: 0;border: 1px solid #cecece;margin-left: -1px;min-width: 50px;text-align: center;}
 .btn_gcm a:hover{background: #7e7e7e;color: #fff;border-color: #7e7e7e;}
+.btn_gcm.end a{background: #44ADF9;color: #fff;border-color: #7e7e7e;}
 .btn_gcm.search {margin-left:3px;  }
 .btn_gcm.search a{display:inline-block; width:100%;box-sizing:border-box;}
 .btn_gcm.save {margin-left:3px;  }
@@ -389,6 +392,8 @@ a:hover,a:active,a:focus{text-decoration:none}
 .btn_gcm.help a{display:inline-block; width:100%;box-sizing:border-box;}
 .btn_gcm.clr {margin-left:3px;  }
 .btn_gcm.clr a{display:inline-block; width:100%;box-sizing:border-box;}
+.btn_gcm.addPath {margin-left:3px;  }
+.btn_gcm.addPath a{display:inline-block; width:100%;box-sizing:border-box;}
 
 .btn_upload {margin-left:3px; background:url(/cm/images/contents/bg_btn_left_repeat.gif) left top repeat-x;}
 .btn_upload a {padding:0 20px 0 12px; display:inline-block; height:22px; line-height:20px; font-weight:bold; background:url(/cm/images/contents/bg_btn_right_up.gif) right top no-repeat; color:#fff;}
@@ -540,8 +545,51 @@ a:hover,a:active,a:focus{text-decoration:none}
 .tmap_busstop_label { background-color: rgba(255,255,255,0.8); color:black; padding: 3px; border: 0.5px solid black; }
 .tmap_cross_label { background-color: rgba(255,255,255,0.8); color:black; padding: 3px; border: 0.5px solid black; }
 
+.map_info {
+	font-size: 12px;
+	padding: 5px;
+}
 
 
+.map_info .map_title {
+	font-weight: bold;
+}
+
+
+.customoverlay {
+    background: #fff;
+    position: relative;
+    bottom: 57px;
+    left:2px;
+    border-radius: 6px;
+    border: 1px solid #ccc;
+    border-bottom: 2px solid #ddd;
+    float: left;
+}
+
+.customoverlay .map_title {
+    display: block;
+    text-align: center;
+    padding: 5px 10px;
+    font-size: 12px;
+    font-weight: bold;
+}
+
+.customoverlay:nth-of-type(n) {
+    border: 0;
+    box-shadow: 0px 1px 2px #888;
+}
+
+.customoverlay:after {
+    content: '';
+    position: absolute;
+    margin-left: -12px;
+    left: 50%;
+    bottom: -12px;
+    width: 22px;
+    height: 12px;
+    background: url(/cm/images/tmap/vertex_white.png);
+}
 
 
 
