--- a/SBRT-Web/src/main/resources/static/cm/css/layout.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/layout.css
@@ -112,6 +112,8 @@
 
 .grdr_20_180_20_20_105_20_20_a {display:grid; grid-template-rows: minmax(20px, max-content) 180px minmax(20px, max-content) minmax(20px, max-content) 105px minmax(20px, max-content) minmax(20px, max-content) auto;}
 
+.grdr_20_100_20_20_105_20_20_a {display:grid; grid-template-rows: minmax(20px, max-content) 100px minmax(20px, max-content) minmax(20px, max-content) 105px minmax(20px, max-content) minmax(20px, max-content) auto;}
+
 .grdr_20_300_20_20_105_20_20_a {display:grid; grid-template-rows: minmax(20px, max-content) 300px minmax(20px, max-content) minmax(20px, max-content) 105px minmax(20px, max-content) minmax(20px, max-content) auto;}
 
 .grdr_20_180_20_20_a {display:grid; grid-template-rows: minmax(20px, max-content) 180px minmax(20px, max-content) minmax(20px, max-content) auto;}
