[백승종] 버스 오버레이 디자인 적용

--- a/SBRT-Web/src/main/resources/static/cm/css/all.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/all.css
@@ -592,6 +592,29 @@ a:hover,a:active,a:focus{text-decoration:none}
 }
 
 
+.busoverlay {
+    background: #9292f3;
+    position: relative;
+    bottom: 57px;
+    left:2px;
+    border-radius: 6px;
+    border: 1px solid #ccc;
+    border-bottom: 2px solid #ddd;
+    float: left;
+}
+
+.busoverlay .map_title {
+    display: block;
+    text-align: center;
+    padding: 5px 10px;
+    font-size: 12px;
+    font-weight: bold;
+}
+
+.busoverlay:nth-of-type(n) {
+    border: 0;
+    box-shadow: 0px 1px 2px #888;
+}
 
 /* 지현추가 : font-awesome.css */
 
