[백승종] 수정 사항 적용

--- a/SBRT-Web/src/main/resources/static/cm/css/layout.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/layout.css
@@ -28,6 +28,23 @@
 .popup_bottom { gap: 0px 5px; margin-bottom: 10px; text-align:center; }
 
 
+.grdc_main_container {display:grid; justify-items: center; grid-template-rows:minmax(30x, max-content)}
+.grdc_bms_main {display:grid; grid-template-columns:minmax(1280px,1830px)}
+.grdc_bms_main_content {display:grid; grid-template-columns:4.8fr 25px 5.2fr}
+.grdc_bms_main_left {display:grid; grid-template-rows:30px 4.8fr 25px 5.2fr}
+.grdc_bms_main_right {display:grid; grid-template-rows:340px 25px 380px}
+.grdc_bms_main_right_content {display:grid; grid-template-columns:1fr 25px 1fr}
+.grdr_20_5_320 {display:grid; grid-template-rows: minmax(20px, max-content) 5px 320px;}
+.grdr_20_5_350 {display:grid; grid-template-rows: minmax(20px, max-content) 5px 350px;}
+
+.grdc_brt_main {display:grid; grid-template-columns:minmax(1280px,1830px)}
+.grdc_brt_main_content {display:grid; grid-template-columns:4.8fr 25px 5.2fr}
+.grdc_brt_main_left {display:grid; grid-template-rows:30px auto}
+.grdc_brt_main_right {display:grid; grid-template-rows:340px 25px 380px}
+.grdc_brt_main_right_content {display:grid; grid-template-columns:1fr 25px 1fr}
+.grdc_brtMain {display:grid; justify-items: center; grid-template-columns:auto}
+.grdc_1f_25_1f {display:grid; grid-template-columns:1fr 25px 1fr;}
+
 .grdc_a {display:grid; grid-template-columns:auto}
 .grdc_500_a {display:grid; grid-template-columns:500px auto;}
 .grdc_300_a {display:grid; grid-template-columns:300px auto;}
@@ -122,6 +139,7 @@
 
 .required {font-color:red;}
 
+.small_vertical_line{box-shadow: 0 0 0 3px #333 inset; margin-top: 50px; margin-bottom: 50px; width: 2px;margin-left: 10px;}
 .vertical_line{box-shadow: 0 0 0 3px #ffffff inset;height: 100%;width: 2px;margin-left: 10px;}
 .horizontal_line{box-shadow: 0 0 0 3px #ffffff inset;height: 2px;width: 100%;margin-top: 10px;margin-bottom: 10px;}
 
