--- a/SBRT-Web/src/main/resources/static/cm/css/main.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/main.css
@@ -245,9 +245,10 @@ body {
 .head_top a.logo{display:block;position:absolute;left: 28px;top: 11px;width:211px;height:22px;background: #daf3d6 url('/cm/images/add/logo.png') no-repeat 0 0;}
 .head_top a.logo > img {display: none;}
 .sysbtnbox{position:absolute;top: 55px;right: 330px;height: 23px;z-index: 999;}
-.sysbtnbox .bis{display:inline-block;width:88px;height:23px;padding:0;margin:0;border:0;color:#fff;line-height:23px;background:#3879d9;border-radius:13px;-moz-border-radius:13px;vertical-align:middle;float: left;display: none;}
 .sysbtnbox .bms{display:inline-block;margin:0 0 0 5px;border:0;color:#fff;background: url('/cm/images/add/bg_arrow.png') no-repeat right 10px;box-sizing: border-box;-moz-border-radius:13px;vertical-align:middle;padding: 0 19px 0 0;font-family: 'Noto Sans',"Helvetica", "Arial", sans-serif;font-size: 14px;height: 23px;}
 .sysbtnbox .bms:hover {font-weight: bold;}
+.sysbtnbox .brt{display:inline-block;margin:0 0 0 5px;border:0;color:#fff;background: url('/cm/images/add/bg_arrow.png') no-repeat right 10px;box-sizing: border-box;-moz-border-radius:13px;vertical-align:middle;padding: 0 19px 0 0;font-family: 'Noto Sans',"Helvetica", "Arial", sans-serif;font-size: 14px;height: 23px;}
+.sysbtnbox .brt:hover {font-weight: bold;}
 
 .head_box{/*지현수정•*/ position:relative; height:44px; background:#333333 url('/cm/images/add/bg_nav.png') no-repeat right 0;}
 
@@ -468,3 +469,64 @@ body {
 
 .btn_closeAll{display:inline-block; z-index:1; text-indent:-9999px; position:absolute; width:20px; height:19px; right:5px; top:9px; background:url(/cm/images/contents/close_off.png) no-repeat left top;}
 .btn_CloseAll:hover{background-image:url(/cm/images/contents/close_on.png);}
+
+.bms_visual{
+	background-image: url('/cm/images/bms/bms_visual.png');
+	border: 1px solid #333;
+	width: 100%;
+	background-repeat: no-repeat;
+	object-fit: cover;
+	/* width: 100%;
+	height: 100vh;
+	background-image: url('/cm/images/inc/bms_visual.png');
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center; */
+}
+
+.bms_cont li{display:block; overflow:hidden; margin-bottom:20px; }
+.bms_cont li ul {position:relative; overflow:hidden; height:72px; border: 1px solid #333;}
+.bms_cont li ul li{position:absolute; left: 120px;}
+.bms_cont li.punct ul li:first-child{left:0; width:60px; height:100%; background:url(/cm/images/bms/punctuality.PNG) no-repeat left top;}
+.bms_cont li.outbreak ul li:first-child{left:0; width:60px; height:100%; background:url(/cm/images/bms/outbreak.PNG) no-repeat left top;}
+.bms_cont li.violation ul li:first-child{left:0; width:60px; height:100%; background:url(/cm/images/bms/violation.PNG) no-repeat left top;}
+.bms_cont li ul li.repeat{height: 72px; left: 60px; right: 60px;}
+.bms_cont li ul li .count{margin-left:20px}
+
+.brt_visual{
+	background-image: url('/cm/images/brt/brt_visual.png');
+	border: 1px solid #333;
+	height: 100%;
+	background-repeat: no-repeat;
+	/* width: 100%;
+	height: 100vh;
+	background-image: url('/cm/images/inc/bms_visual.png');
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center; */
+}
+
+.brt_cont_left li{display:block; overflow:hidden; margin-bottom:20px; }
+.brt_cont_left li ul {position:relative; overflow:hidden; height:100px; border: 1px solid #333;}
+.brt_cont_left li ul li{position:absolute; left: 120px;}
+.brt_cont_left li.weather_temp ul li:first-child{left:0; width:60px; height:100%; background:url(/cm/images/brt/sunny_icon.PNG) no-repeat left top;}
+.brt_cont_left li.weather_humid ul li:first-child{left:0; width:60px; height:100%; background:url(/cm/images/brt/humidity_icon.PNG) no-repeat left top;}
+.brt_cont_left li ul li.repeat{height: 100px; left: 60px; right: 60px;}
+.brt_cont_left li ul li .count{margin-left:20px}
+
+.brt_cont_right li{display:block; overflow:hidden; margin-bottom:20px; }
+.brt_cont_right li ul {position:relative; overflow:hidden; height:35px; border: 1px solid #333;}
+.brt_cont_right li ul li{position:absolute; left: 120px;}
+.brt_cont_right li.fine_dust ul li.air_icon{left:250px; width:60px; height:100%; background:url(/cm/images/brt/normal_icon.PNG) no-repeat left top;}
+.brt_cont_right li.ozone ul li.air_icon{left:250px; width:60px; height:100%; background:url(/cm/images/brt/bad_icon.PNG) no-repeat left top;}
+.brt_cont_right li.nitrogen_dioxide ul li.air_icon{left:250px; width:60px; height:100%; background:url(/cm/images/brt/good_icon.PNG) no-repeat left top;}
+.brt_cont_right li.carbon_monoxide ul li.air_icon{left:250px; width:60px; height:100%; background:url(/cm/images/brt/good_icon.PNG) no-repeat left top;}
+.brt_cont_right li.sulfur_dioxide ul li.air_icon{left:250px; width:60px; height:100%; background:url(/cm/images/brt/good_icon.PNG) no-repeat left top;}
+.brt_cont_right li ul li.repeat{height: 35px; left: 10px;}
+.brt_cont_right li ul li.count{margin-left:20px}
+.brt_cont_right li ul li.air_status{margin-left:20px; left:200px;}
+.brt_cont_right li ul li.air_icon{margin-left:20px; }
+
+.brt_main_link {position:relative; top:150px; }
+.brt_main_link ul li{position:relative; float:left; display:inline-block;  height:140px; width:135px; background-color: white; margin-right: 11px; margin-left: 11px; text-align: center;}
+.brt_main_link ul li a img {margin-top: 25px;margin-bottom: 10px;}
