[양현우] 노선별 차량 관리 레이아웃

--- a/SBRT-Web/src/main/resources/static/cm/css/layout.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/layout.css
@@ -77,6 +77,7 @@
 
 .grdc_a_20_a {display:grid; grid-template-columns:auto 20px auto;}
 
+.grdc_a_20_600_60_600  {display:grid; grid-template-columns:auto 20px 600px 60px 600px;}
 
 .grdc_1f_1f {display:grid; grid-template-columns:1fr 1fr;}
 .grdc_200_1f_1f {display:grid; grid-template-columns:200px 1fr 1fr;}
